minikube_ingress/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - v1.prueba.com
    - v2.prueba.com
    secretName: hello-minikube-tls
  ingressClassName: nginx
  rules:
  - host: v1.prueba.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: hello-v1-svc
            port:
              number: 80
        
  - host: v2.prueba.com 
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: hello-v2-svc
            port:
              number: 80
